objects/ASI_CRM_T2_Selling_Price__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_WS_Tier__c</fullName>
        <label>WS Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>ASI_CRM_T2_Selling_Price</relationshipLabel>
        <relationshipName>ASI_CRM_T2_Selling_Price</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Direct_Price__c</fullName>
        <label>Direct Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>ASI_CRM_T2_Selling_Price</relationshipLabel>
        <relationshipName>ASI_CRM_T2_Selling_Price</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesale_Price__c</fullName>
        <label>Wholesale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>T2 Selling Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>T2 Selling Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T2 Selling Prices</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_T2_Selling_Price</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_T2_Selling_Price</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>